--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,8 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js" : ["app.js"],
-        "css": ["styles.css"]
+        "js" : ["src/app.js"],
+        "css": ["src/styles.css"]
       }
     ]
   }
