--- a/manifest.json
+++ b/manifest.json
@@ -7,19 +7,13 @@
       "activeTab"
     ],
     "action": {
-        "default_popup": "src/index.html",
+        "default_popup": "./src/index.html",
         "default_icon": {
             "16": "icons/16x16.png",
             "24": "icons/24x24.png",
             "32": "icons/32x32.png"
         }
     },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js" : ["src/app.js"],
-        "css": ["src/styles.css"]
-      }
-    ]
+    
   }
   
