--- a/package.json
+++ b/package.json
@@ -2,21 +2,12 @@
   "name": "icon-gen-chrome",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "snowpack": "^3.8.8",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "sharp": "^0.33.3"
-  }
+  "license": "ISC"
 }
