--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,20 @@
     "manifest_version": 3,
     "name": "Icon GMan",
     "version": "1.0",
-    "description": "A browser extension that genarate Icons for devlopment.",
+    "description": "A browser extension that generates Icons for development.",
     "action": {
-        "default_popup": "./src/index.html",
-        "default_icon": {
-            "16": "icons/16x16.png",
-            "24": "icons/24x24.png",
-            "32": "icons/32x32.png"
-        }
+      "default_popup": "./src/index.html",
+      "default_icon": {
+        "16": "icons/16x16.png",
+        "24": "icons/24x24.png",
+        "32": "icons/32x32.png"
+      }
     },
-    "permissions": ["storage", "scripting"]
+    "permissions": [
+      "storage",
+      "scripting",
+      "activeTab",
+      "downloads"
+    ]
   }
   
